# libds

./: .gitignore  Makefile.am  README  configure.ac
examples/: Makefile.am  median.c
src/: Makefile.am  heap.c  heap.h
tests/: Makefile.am  check_heap.c
